cedarschema/test/corpus/rfc/schema_syntax_10.txt
================================================================================
schema_syntax_10
================================================================================

// https://github.com/cedar-policy/rfcs/blob/d51ecf5ec1717609783977a4e45f60a644c52618/text/0024-schema-syntax.md?plain=1#L329-L357

namespace DocCloud {
    entity User in [Group] {
        personalGroup: Group,
        blocked: Set<User>
    };
    entity Group in [DocumentShare] {
        owner: User
    };
    entity Document {
        owner: User,
        isPrivate: Boolean,
        publicAccess: String,
        viewACL: DocumentShare,
        modifyACL: DocumentShare,
        manageACL: DocumentShare
    };
    entity DocumentShare;
    entity Public in [DocumentShare];
    entity Drive;

    action CreateDocument, CreateGroup
        appliesTo { principal: [User], resource: [Drive] };
    action ViewDocument
        appliesTo { principal: [User,Public], resource: [Document] };
    action DeleteDocument, ModifyDocument, EditIsPrivate, AddToShareACL, EditPublicAccess
        appliesTo { principal: [User], resource: [Document] };
    action ModifyGroup, DeleteGroup
        appliesTo { principal: [User], resource: [Group] };
}

--------------------------------------------------------------------------------

(schema
  (comment)
  (namespace
    (name
      (identifier))
    (entity_declaration
      (identifier_list
        (identifier))
      (entity_parents
        (type_list
          (name
            (identifier))))
      (type_reference
        (record_type
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier))))
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier))
              (type_reference
                (name
                  (identifier))))))))
    (entity_declaration
      (identifier_list
        (identifier))
      (entity_parents
        (type_list
          (name
            (identifier))))
      (type_reference
        (record_type
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier)))))))
    (entity_declaration
      (identifier_list
        (identifier))
      (type_reference
        (record_type
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier))))
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier))))
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier))))
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier))))
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier))))
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier)))))))
    (entity_declaration
      (identifier_list
        (identifier)))
    (entity_declaration
      (identifier_list
        (identifier))
      (entity_parents
        (type_list
          (name
            (identifier)))))
    (entity_declaration
      (identifier_list
        (identifier)))
    (action_declaration
      (action_name_list
        (identifier)
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))))
    (action_declaration
      (action_name_list
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))))
    (action_declaration
      (action_name_list
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))))
    (action_declaration
      (action_name_list
        (identifier)
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))))))
