cedarschema/test/corpus/rfc/schema_syntax_3.txt
================================================================================
schema_syntax_3
================================================================================

// https://github.com/cedar-policy/rfcs/blob/d51ecf5ec1717609783977a4e45f60a644c52618/text/0024-schema-syntax.md?plain=1#L108

entity User, Team in [Team] { name: String };

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier)
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))))
    (type_reference
      (record_type
        (attribute_declaration
          (identifier)
          (type_reference
            (name
              (identifier))))))))
