cedarschema/test/corpus/rfc/schema_syntax_4.txt
================================================================================
schema_syntax_4
================================================================================

// https://github.com/cedar-policy/rfcs/blob/d51ecf5ec1717609783977a4e45f60a644c52618/text/0024-schema-syntax.md?plain=1#L117-L130

action ReadActions;
action WriteActions;
action CreateDocument
    appliesTo { principal: [User], resource: [Drive] };
action DeleteDocument in [WriteActions]
    appliesTo { principal: [User], resource: [Document] };
action ViewDocument in [ReadActions] appliesTo {
    principal: [User,Public],
    resource: Document,
    context: {
        network: ipaddr,
        browser: String
    }
};

--------------------------------------------------------------------------------

(schema
  (comment)
  (action_declaration
    (action_name_list
      (identifier)))
  (action_declaration
    (action_name_list
      (identifier)))
  (action_declaration
    (action_name_list
      (identifier))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier))))))
  (action_declaration
    (action_name_list
      (identifier))
    (action_parents
      (qualified_name_list
        (qualified_name
          (identifier))))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier))))))
  (action_declaration
    (action_name_list
      (identifier))
    (action_parents
      (qualified_name_list
        (qualified_name
          (identifier))))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier))
          (name
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier))))
      (context_type
        (record_type
          (attribute_declaration
            (identifier)
            (name
              (identifier)))
          (attribute_declaration
            (identifier)
            (primitive_type)))))))
