cedarschema/test/corpus/rfc/schema_syntax_5.txt
================================================================================
schema_syntax_5
================================================================================

// https://github.com/cedar-policy/rfcs/blob/d51ecf5ec1717609783977a4e45f60a644c52618/text/0024-schema-syntax.md?plain=1#L151-L160

action ViewDocument in ReadActions appliesTo {
    resource: Document,
    context: {}
};
action Ping appliesTo {
    context: {
        source: ipaddr,
        dest: ipaddr
    }
};

--------------------------------------------------------------------------------

(schema
  (comment)
  (action_declaration
    (action_name_list
      (identifier))
    (action_parents
      (qualified_name_list
        (qualified_name
          (identifier))))
    (applies_to
      (resource_types
        (type_list
          (name
            (identifier))))
      (context_type
        (record_type))))
  (action_declaration
    (action_name_list
      (identifier))
    (applies_to
      (context_type
        (record_type
          (attribute_declaration
            (identifier)
            (name
              (identifier)))
          (attribute_declaration
            (identifier)
            (name
              (identifier))))))))
